EB-2001-12-06-1: Enhancem.: 'max_aj_tasks' defines the maximum number of 
                            allowed tasks within an array job. (75,000)
                            changed default value for 'max_aj_instances' (2000)

JG-2001-12-06-0: Bugfix:    Cull hash implementation: When cull objects were 
                            received and unpacked, all fields that did not 
                            have a hash table in the original had a unique
                            hash table created.

EB-2001-12-06-0: Bugfix:    It was not possible to modify the hold state
                            of tasks without task id specification.
                            (e.g. qalter -h u <jobid> failed)
                 Issue:     None (Fix of Enhancem.: EB-2001-12-04-0)

JG-2001-12-05-0: Testsuite: Adapt qrsh test to use newer spawn function
                            open_remote_spawn_process.

EB-2001-12-05-0: Bugfix:    Master got pending tickets for jobs which
                            where already started.
                 Issue:     None (Fix of Enhancem.: EB-2001-12-04-0)

SD-2001-12-04-1: Enhancem.: SGEEE - Added support for qconf -clearusage to reset
                            sharetree usage back to zero.

JG-2001-12-04-0: Bugfix:    shepherd: async commands had no valid filehandles
                            for stdin/stdout/stderr. This could cause the 
                            async command, e.g. a terminate method, to fail.

EB-2001-12-04-0: Enhancem.: Memory optimization for array jobs

AH-2001-12-03-0: Bugfix:    Resolve hostname contained in 'act_qmaster' file 
                            before comparing it with me.qualified_hostname

JG-2001-12-03-0: Testsuite: parsing of qstat -ext output did not return
                            correct cpu value.

AA-2001-11-30-4: Feature:   Security changes:
                            - common/complex.[ch] -> sge_complex.[ch]
                              due to name conflict when compiling under